crates/gwsim-data/tests/snapshots/data_tree__a_benchmark_skill_code_that_does_not_decode_is_an_error.snap
---
source: crates/gwsim-data/tests/data_tree.rs
expression: report(&source)
---
benchmarks/7-hero-mesmerway.ron:
  error: slot 1's skill_code does not decode: character 3 is '-', which is not part of a template code

creatures/foes/kournan/kournan-seer.ron:
  warning: A-004 has no value yet, so anything depending on this file is uncalibrated

1 error, 1 warning in 2 files
