crates/gwsim-data/tests/snapshots/data_tree__a_dangling_encounter_foe.snap
---
source: crates/gwsim-data/tests/data_tree.rs
expression: report(&source)
---
creatures/foes/kournan/kournan-seer.ron:
  warning: A-004 has no value yet, so anything depending on this file is uncalibrated

encounters/curated/nightfall/vehtendi-valley/kournan-patrol.ron:
  error: this encounter uses the foe `kournan-sear`, but there is no creatures/foes/**/kournan-sear.ron

1 error, 1 warning in 2 files
