crates/gwsim-data/tests/snapshots/data_tree__a_draft_skill_without_an_encoding.snap
---
source: crates/gwsim-data/tests/data_tree.rs
expression: report(&source)
---
creatures/foes/kournan/kournan-seer.ron:
  warning: A-004 has no value yet, so anything depending on this file is uncalibrated

skills/mesmer/energy-surge.ron:
  error: this skill is Draft but has no encoding; a Draft skill is one that has been encoded, so set it back to NumbersOnly

1 error, 1 warning in 2 files
