crates/gwsim-data/tests/snapshots/data_tree__a_file_name_that_does_not_match_its_slug.snap
---
source: crates/gwsim-data/tests/data_tree.rs
expression: report(&source)
---
creatures/foes/kournan/kournan-seer.ron:
  warning: A-004 has no value yet, so anything depending on this file is uncalibrated

skills/mesmer/energy_surge.ron:
  error: the file is named energy_surge.ron but its contents slugify to energy-surge; rename it to energy-surge.ron

1 error, 1 warning in 2 files
