crates/gwsim-data/tests/snapshots/data_tree__a_foe_missing_its_hard_mode_level.snap
---
source: crates/gwsim-data/tests/data_tree.rs
expression: report(&source)
---
creatures/foes/kournan/kournan-seer.ron:
  warning: A-004 has no value yet, so anything depending on this file is uncalibrated
  error: this foe has no hard-mode level; take it from the mapping in core/levels.ron and write it here

1 error, 1 warning in 1 file
